Update contact form

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         </p>
         <form name="contact" method="POST" data-netlify="true" action="/success.html">
             <input type="hidden" name="form-name" value="contact">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
         <span class="social-links">
